--- a/BBJ-UP1/index.html
+++ b/BBJ-UP1/index.html
@@ -223,7 +223,7 @@ ainda mais meus resultados e tambem definir meu abdomem?
         <span class="new-price">R$ 97</span>
     </h1>
     </p>
-    <a class="btn mt-3" href="https://go.perfectpay.com.br/PPU38CKHI1P?src=upssel-Shorts">
+    <a class="btn mt-3" href="https://go.perfectpay.com.br/PPU38CKHI1P?upsell=true">
         Sim, Adicione Isso Ao Meu Pedido!
     </a>
     <a class="V"href="https://banco-img.cf/BBJ-DOWNSELL"><u>
